<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.michel.darts.MainActivity">

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:paddingBottom="16dp"
                android:paddingTop="8dp"
                android:text="@string/player_a"
                android:textColor="@color/colorForPlayerA"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_a_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="301"
                android:textColor="@color/black"
                android:textSize="64sp" />

        </LinearLayout>


        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:paddingBottom="16dp"
                android:paddingTop="8dp"
                android:text="@string/player_b"
                android:textColor="@color/colorForPlayerB"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_b_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="301"
                android:textColor="@color/black"
                android:textSize="64sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_top"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_whose_turn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/player_a_turn"
            android:textColor="@color/colorForPlayerA" />

        <EditText
            android:id="@+id/et_score_to_subtract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/colorForPlayerA"
            android:gravity="center"
            android:hint="@string/points_scored_on_turn"
            android:imeOptions="actionDone"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_subtract"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:onClick="removePoints"
            android:text="@string/subtract" />

    </LinearLayout>

</RelativeLayout>
